Server: Fix alignment of item-action-panel

--- a/packages/flamenco/src/styles/_app_base.sass
+++ b/packages/flamenco/src/styles/_app_base.sass
@@ -295,6 +295,8 @@ nav.sidebar
 #item-action-panel
 	padding: 0 10px 10px 10px
 	width: 100%
+	display: flex
+	justify-content: flex-end
 
 	.btn
 		font-size: .8em
